<resources>
    <string name="app_name">FortyTwoMilliseconds</string>
    <string name="app_name_explainer">The approximate span of time a single frame of film is shown on screen.</string>
    <string name="themoviedb_disclaimer">This application uses, but is not endorsed or certified by TMDb.</string>

    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_movie">Movie Details</string>
    <string name="title_activity_about">About</string>

    <string name="button_read">READ</string>
    <string name="button_watch">WATCH</string>

    <!-- URL links -->
    <string name="url_themoviedb">http://www.themoviedb.org/</string>

    <!-- Content Descriptions for Imagery -->
    <string name="themoviedb_logo_description">Logo for themoviedb.</string>
    <string name="cd_poster_generic">Movie Poster</string>
    <string name="cd_backdrop_generic">Movie Backdrop</string>

    <!-- Format Strings -->
    <string name="format_release_date">Release date: %1$s</string>
    <string name="format_rating">Rating: %1$s/10.0 in %2$d votes</string>
    <string name="format_review_count">Reviews: %1$d</string>
    <string name="format_review_by">Review by: %1$s</string>

    <!-- Settings Related Strings -->
    <string name="setting_base_url_key">base_image_url</string>

    <string name="setting_image_size_key">image_size</string>
    <string name="setting_image_size_label">Image Size</string>
    <string name="setting_image_size_default">w154</string>

    <string name="setting_sort_by_key">sort_by</string>
    <string name="setting_sort_by_label">Sort By</string>
    <string name="setting_sort_by_default">popularity.desc</string>

    <string name="setting_vote_thresh_key">vote_threshold</string>
    <string name="setting_vote_thresh_label">Minimum Votes (Highest Rated)</string>
    <string name="setting_vote_thresh_default">50</string>


</resources>
