<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/MovieTheme">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/MovieTheme.TextAbout"
                android:textSize="@dimen/text_size_display1"
                android:text="@string/app_name"/>

            <TextView
                style="@style/MovieTheme.TextAbout"
                android:text="@string/app_name_explainer"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/themoviedb_logo_attribution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/themoviedb_logo_v5"
            android:contentDescription="@string/themoviedb_logo_description"/>

        <TextView
            style="@style/MovieTheme.TextAbout"
            android:text="@string/themoviedb_disclaimer" />

    </LinearLayout>
</LinearLayout>